# bitsxlamarato-medulloblastoma

./: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup_conda.sh  setup_venv.sh  setup_windows.bat
app/: app.py
app/data/statistical/: logreg_save.joblib
app/static/: script.js
app/templates/: index.html
docs/: mkdocs.yml
docs/docs/: contributing.md  getting-started.md  index.md
docs/docs/api/: dataset.md  features.md  modeling.md  plots.md
docs/docs/examples/: basic-usage.md
medulloblastoma/: __init__.py  dataset.py  features.py  plots.py
medulloblastoma/modeling/: check_model.py  predict.py  train_model.py
medulloblastoma/synthetic/: globals.py  main.py  synthetic.py
medulloblastoma/synthetic/data/: dParser.py
medulloblastoma/synthetic/model/: lDiscriminator.py  lGenerator.py  mDiscriminator.py  mGenerator.py
notebooks/: medulloblastoma-analysis.ipynb
test_optimization_results/: cutoff.txt
tests/: test_data.py
