[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "medulloblastoma"
version = "0.1.0"
description = "AI model for G3/G4 medulloblastoma subgroup classification from transcriptomics data using explainable machine learning"
authors = [
  { name = "Jose Estragues", email = "jose.estragues@bsc.es" },
  { name = "Guillermo Prol", email = "guillermo.prolcastelo@bsc.es" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["medulloblastoma", "machine-learning", "transcriptomics", "pediatric-cancer", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10.0"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "umap-learn>=0.5.0",
    "requests>=2.25.0",
    "tqdm>=4.62.0",
    "python-dotenv>=0.19.0",
    "loguru>=0.6.0",
    "typer>=0.6.0"
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "pytest>=6.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "notebook>=6.4.0",
    "ipython>=7.0.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings>=0.19.0",
    "mkdocstrings-python>=0.7.0"
]

[project.urls]
Homepage = "https://github.com/bsc-health/bitsxlamarato-medulloblastoma"
Repository = "https://github.com/bsc-health/bitsxlamarato-medulloblastoma"
Documentation = "https://bsc-health.github.io/bitsxlamarato-medulloblastoma"
Issues = "https://github.com/bsc-health/bitsxlamarato-medulloblastoma/issues"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["medulloblastoma"]
force_sort_within_sections = true